--- a/Report.tex
+++ b/Report.tex
@@ -10,7 +10,8 @@
 
 \pagenumbering{arabic}
 
-\newpage\input{./sections/problem}
+\newpage\input{./sections/Introduction}
+\newpage\input{./sections/Case}
 \newpage\input{./sections/mesh}
 
 
