--- a/Report.tex
+++ b/Report.tex
@@ -13,6 +13,8 @@
 \newpage\input{./sections/Introduction}
 \newpage\input{./sections/Case}
 \newpage\input{./sections/mesh}
+\newpage\input{./sections/problem}
+\newpage\input{./sections/simulation}
 
 
 % BIBLIOGRAPHY
