--- a/Report.tex
+++ b/Report.tex
@@ -5,8 +5,21 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input{doc_config/config} % Document Configurations
+\input{doc_config/doc_info} % Document Configurations
+\input{doc_config/defined_stuff}
 
 \begin{document}
+
+\input{./doc_config/cover} % COVER
+\thispagestyle{empty}
+\mbox{}\newpage
+
+\pagenumbering{roman}
+
+% TABLE OF CONTENTS
+\tableofcontents
+
+% BEGIN THE DOCUMENT
 
 \pagenumbering{arabic}
 
