--- a/sections/mesh.tex
+++ b/sections/mesh.tex
@@ -44,8 +44,6 @@ Patches\\*
   End
 }
 
-
-
 \begin{figure}[h!]
 \includegraphics[scale=0.26]{./mesh/screenshots/blockmesh}
 \centering
@@ -61,6 +59,7 @@ Patches\\*
 \paragraph{}A comparison between the coarse mesh and the refined mesh generated is presented below.
 
 \subsubsection{Coarse mesh}
+\paragraph{}The number of control volumes in the mesh is 40.
 
 \begin{figure}[h!]
 \includegraphics[scale=0.26]{./mesh/screenshots/coarse2}
