Case i Introduction arreglats

--- a/doc_config/doc_info.tex
+++ b/doc_config/doc_info.tex
@@ -19,7 +19,7 @@
 \newcommand{\Studiii}	{Morata Carranza, David}
 
 % Project Name
-\newcommand{\ProjectName}{Simulation of the first stages of a turbofan using OpenFoam}
+\newcommand{\ProjectName}{Simulation of the first stages of a turbofan using OpenFOAM}
 
 % Kind of document
 \newcommand{\DocType}{Report}
