--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -1,7 +1,8 @@
 \section{Introduction}
 
 \paragraph{}
-During the development of the subject of \textit{"Application of Open-Source CFD to engineering problems"} we have obtained knowledges in relation to computational fluid dynamics (CFD), open source and open foam. Initially was presented a list of different possible projects to perform as a group during the course and its subsequent delivery. After agreeing with the teacher,it was decided to choose a project outside this list and related to propulsive systems, specifically a jet engine. 
+During the development of the course \textit{'Application of Open-Source CFD to engineering problems'} we have learned the basics of how to use and solve real-world cases and situations related with fluid mechanics using OpenFOAM, an open source CFD tool. During the first days of the course, several possible projects were presented and we had to choose one of them. After agreeing with the professor, we decided to simulate a project that was not on that list. Since we are really interested in propulsion, we thought that it was a good idea to try to simulate the flow inside the first stages of compression of a turbofan engine.
 
-\paragraph{}
-We have found interessant and useful  study this engine instead of other aerospace projects such as an airfoil because we are interested in propulsion systems and this project could give extra knowledges on this matter in view of a future TFG related to this subject. Furthermore, this engines is one of the most important  in the aerospace industry and it is used in planes sucha as Airbus A380 or Boeing 747.
+\paragraph{}To do that, we have been gathering lots of information of this type of engines and their typical working conditions in order to obtain realistic results. 
+
+\paragraph{}These type of engine is the most used propulsion system in the aerospace industry. It presents several advantages to other systems such as the turbohelix or the turbojet; for example, this kind of engine takes advantage of the flow that goes through the fan (that cannot be more compressed or heated given that the combustion chamber has a limited volume) and results in a higher thrust. Thus, it is no surprise that state-of-the-art planes such as the Airbus 380 or the Boeing 747 use this kind of propulsion system.
