--- a/Report.tex
+++ b/Report.tex
@@ -25,7 +25,7 @@
 
 \newpage\input{./sections/Introduction}
 \newpage\input{./sections/Case}
-\newpage\input{./sections/mesh}
+\newpage\input{./sections/Preprocess}
 \newpage\input{./sections/problem}
 \newpage\input{./sections/simulation}
 
