--- a/sections/Case.tex
+++ b/sections/Case.tex
@@ -2,7 +2,7 @@
 
 \subsection{Description of the case}
 
-\paragraph{}The aim of this project is to analyze the airflow inside the first stages of a turbofan. The turbofan consists of an initial stage where a fan is placed. This first stage increases the pressure of the air that goes through it and, as it can be seen in \ref{turbofanparts}, a part of the incoming airflow goes to the low pressure compression stage (main or primary flow) and the other goes to the conducts (secondary flow). As the secondary flow advances through the conduct, the main flow enters the engine core where it goes through the low pressure and high pressure compression stages. By increasing the pressure of the air, the density also increases; thus, a higher mass flow can be mixed with the fuel and burned in the combustion chamber. After this process, the gases go through the turbines, interchanging energy with them (pressure and velocity, mainly), and they arrive at the nozzle, where the air is accelerated, and a thrust force is obtained.
+\paragraph{}The aim of the current project is to analyze the airflow inside the first stages of a turbofan. The turbofan consists of an initial stage where a fan is placed. This first stage increases the pressure of the air that goes through it and, as it can be seen in \ref{turbofanparts}, a part of the incoming airflow goes to the low pressure compression stage (main or primary flow) and the other goes to the conducts (secondary flow). As the secondary flow advances through the conduct, the main flow enters the engine core where it goes through the low pressure and high pressure compression stages. By increasing the pressure of the air, the density also increases; thus, a higher mass flow can be mixed with the fuel and burned in the combustion chamber. After this process, the gases go through the turbines, interchanging energy with them (pressure and velocity, mainly), and they arrive at the nozzle, where the air is accelerated, and a thrust force is obtained.
 
 \begin{figure}[h!]
 \centering
@@ -11,10 +11,7 @@
 \label{turbofanparts}
 \end{figure}
 
-\paragraph{}To simulate the flow in the first stages of the turbofan, we have downloaded the following turbine model from \textit{GrabCad}, shown in \ref{turbinegrabcad}. This model is pretty similar with the one shown above (\ref{turbofanparts}) and the simulation will take place between the back side of the fan and the back side of the second compressor.
-
-\paragraph{}The geometry of the \textit{blockMesh} as well as the refined mesh of this parts will be shown and discussed in the next section.
-
+\paragraph{}To simulate the flow in the first stages of the turbofan, we have downloaded the following turbine model from \textit{GrabCad}, shown in \ref{turbinegrabcad}. This model is pretty similar with the one shown above (\ref{turbofanparts}) and the simulation will take place between the back side of the fan and the back side of the second compressor. There are several realistic and potentially functional models on \textit{GrabCad}; however, this model has been selected because it did not present incompatibilities with \textit{SolidWorks} and \textit{Salome}. Given that all the parts of the model have to be clearly differentiated in order to export them as \textit{STL} files, we could not use an assembly.
 
 \begin{figure}[h!]
 \centering
@@ -25,7 +22,7 @@
 
 \subsection{Hypotheses}
 
-\paragraph{}Given that we are not able to use a supercomputer and the computational power that is available to us is very limited (since we are using our own personal computers to run this simulation), several hypotheses have to be made to alleviate the calculation time. These hypotheses are presented below.
+\paragraph{}Given that we are not able to use a supercomputer and the computational power that is available to us is very limited since we are using our own personal computers to run this simulation, several hypotheses have to be made to alleviate the calculation time, as mentioned before. Some of them can be assumed and some other will make the case a non-realistic project. These hypotheses are presented below.
 
 \begin{itemize}
 	\item Viscous flow
@@ -34,5 +31,6 @@
 	\item Stationary flow
 \end{itemize}
 
-\paragraph{}Clearly, the flow is not incompressible; the aim of the turbofan is to compress the air to pursue a more efficient combustion. However, the compressible solvers are really difficult to use and the computation time is also higher given that we have a high number of control volumes (as discussed in the next section). \\
-So, the simulation will take into account that it is a tridimensional, that it behaves as a newtonian fluid and it will be run under stationary flow conditions (that is: the velocity in the inlet is always uniform and has a fixed value).
+\paragraph{}Clearly, the flow is not incompressible in reality; the aim of the turbofan is to compress the air to seek for a more efficient combustion. However, all of the compressible solvers are really difficult to use and the computational time is also higher given that we have a high number of control volumes (as discussed in the next section) due to a really complex geometry. Thus, although it will not be a completely real flow, we will be also able to see how the low pressure section of the engine increases the pressure of the flow and how the velocity field changes as it goes through the turbine.
+
+\paragraph{}The simulation will take into account that it is a tridimensional, that it behaves as a newtonian fluid and it will be run under stationary flow conditions (that is: the velocity in the inlet is always uniform and has a fixed value). With these hypothesis, we can begin to discuss the geometry of the \textit{blockMesh} as well as the refined mesh and the boundary conditions and final results within the next sections.
