--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -1,8 +1,10 @@
 \section{Introduction}
 
-\paragraph{}
-During the development of the course \textit{'Application of Open-Source CFD to engineering problems'} we have learned the basics of how to use and solve real-world cases and situations related with fluid mechanics using OpenFOAM, an open source CFD tool. During the first days of the course, several possible projects were presented and we had to choose one of them. After agreeing with the professor, we decided to simulate a project that was not on that list. Since we are really interested in propulsion, we thought that it was a good idea to try to simulate the flow inside the first stages of compression of a turbofan engine.
+\paragraph{}During the development of the course \textit{'Application of Open-Source CFD to engineering problems'} we have learned the basics of how to use and solve real-world cases and situations related with fluid mechanics using OpenFOAM, an open source CFD tool. The first days of the course, several possible projects were presented and we had to choose one of them and make a report. After agreeing with the professor, we decided to simulate an option that was not on that list. Since we are really interested in propulsion, we thought that it was a good idea to try to simulate the flow inside the first stages of compression of a turbofan engine.
 
-\paragraph{}To do that, we have been gathering lots of information of this type of engines and their typical working conditions in order to obtain realistic results. 
+\paragraph{}These type of engines are the most used propulsion system in the aerospace industry. It presents several advantages to other systems such as the turbohelix or the turbojet; for example, this kind of engine takes advantage of the flow that goes through the fan (that cannot be more compressed or heated given that the combustion chamber has a limited volume) and comes out through the rear nozzle. This results in a higher thrust for the same amount of fuel that is burned. Thus, it is no surprise that state-of-the-art planes such as the Airbus 380 or the Boeing 747 use this kind of propulsion system.
 
-\paragraph{}These type of engine is the most used propulsion system in the aerospace industry. It presents several advantages to other systems such as the turbohelix or the turbojet; for example, this kind of engine takes advantage of the flow that goes through the fan (that cannot be more compressed or heated given that the combustion chamber has a limited volume) and results in a higher thrust. Thus, it is no surprise that state-of-the-art planes such as the Airbus 380 or the Boeing 747 use this kind of propulsion system.
+\paragraph{}In order to do a realistic simulation, we have been gathering lots of information of this type of engines and their typical working conditions. Also, we have been searching for information about how could we solve a geometry that is rotating. Several simulations and comparisons will be presented in this report to analyze the validity of the results obtained. 
+
+\paragraph{}It will be presented in this report how to use the Multiple Reference Frame utility (MRF) as well as the boundary conditions, the mesh generation and the solver that has been used for the case. Additionally, several hypotheses will be considered in order to alleviate the computation time (given that this project has been simulated in a laptop).
+
