--- a/sections/Case.tex
+++ b/sections/Case.tex
@@ -29,6 +29,7 @@
 	\item Incompressible flow
 	\item Newtonian flow
 	\item Stationary flow
+	\item Laminar flow
 \end{itemize}
 
 \paragraph{}Clearly, the flow is not incompressible in reality; the aim of the turbofan is to compress the air to seek for a more efficient combustion. However, all of the compressible solvers are really difficult to use and the computational time is also higher given that we have a high number of control volumes (as discussed in the next section) due to a really complex geometry. Thus, although it will not be a completely real flow, we will be also able to see how the low pressure section of the engine increases the pressure of the flow and how the velocity field changes as it goes through the turbine.
